:lipstick: Layout Sources List

--- a/core/common/src/main/res/values/strings.xml
+++ b/core/common/src/main/res/values/strings.xml
@@ -6,9 +6,13 @@
     <string name="cannot_load_desc">Tidak dapat memuat %s</string>
 
     <string name="not_found">Tidak ditemukan</string>
-    <string name="not_found_desc">Hasil pencarian anda tidak dapat ditemukan.</string>
+    <string name="not_found_desc">Mohon maaf, hasil tidak ditemukan.</string>
 
     <string name="image">Gambar</string>
+    <string name="loading">Loading…</string>
+    <string name="select">Select</string>
+
+    <string name="all">semua</string>
 
     <string name="general">General</string>
     <string name="business">Business</string>
