--- a/feature/search/src/main/res/values/strings.xml
+++ b/feature/search/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="search_result_not_found">Sorry, there is no content found for your search \"%1$s\"</string>
     <string name="search_not_ready">Sorry, we are still processing the search index. Please come back later.</string>
     <string name="try_another_search">Try another search or explorer </string>
-    <string name="interests">Interests</string>
+    <string name="sources">Sources</string>
     <string name="to_browse_topics"> to browse topics</string>
     <string name="topics">Topics</string>
     <string name="updates">Updates</string>
