--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="visit_page">Kunjungi halaman</string>
 
     <string name="unread_resource_dot_content_description">Unread</string>
+    <string name="search">Search</string>
+    <string name="clear_search_text_content_desc">Clear search text</string>
 
     <string name="card_tap_action">Open Resource Link</string>
     <string name="card_meta_data_text">%1$s • %2$s</string>
